# fastapi-model-deployment

./: .dockerignore  Dockerfile  README.md  pyproject.toml
api/: main.py
app/: config.py  engine.py
demo/: streamlit_app.py
